--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 cycler==0.10.0
+decorator==4.1.2
 matplotlib==2.0.2
+networkx==2.0
 numpy==1.13.3
+olefile==0.44
 pandas==0.20.3
+Pillow==4.3.0
 pyglet==1.2.4
 PyOpenGL==3.1.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
 python-qt==0.50
 pytz==2017.2
+PyWavelets==0.5.2
+scikit-image==0.13.1
+scikit-video==0.1.2
+scipy==0.19.1
 six==1.11.0
