--- a/MAIN2/makefile
+++ b/MAIN2/makefile
@@ -1,2 +1,3 @@
 convert:
-	pyuic5 -x MainWindow.ui -o MainWindowTemplate.py
+	pyuic5 -x UI_files/MainWindow.ui -o MainWindowTemplate.py
+	pyuic5 -x UI_files/animationSettings.ui -o animationSettingsTemplate.py
